# openglsandbox

./: .firebaserc  .gitignore  CMakeLists.txt  README.md  camera.cpp  gameWindow.cpp  gameWindow.h  glErrChecks.cpp  main.cpp  model.cpp  model.h  physicalModel.cpp  physicalModel.h  physicalWorld.cpp  physicalWorld.h  shader.cpp  shader.h  visualModel.cpp  visualModel.h  world.cpp  world.h
assets/: basicShader.glsl  hitbox.glsl  myworld5  scene1  sprite.glsl  strange.glsl  textured.1.glsl  textured.glsl  world1
libs/imgui/: CMakeLists.txt  imgui_impl_opengl3.cpp  imgui_impl_sdl.cpp
src/: app.cpp  app.h  camera.h  controls.cpp  controls.h  gameWindow.cpp  main.cpp  physicalModel.cpp  physicalModel.h  shader.cpp  shader.h  visualModel.cpp  visualModel.h
